Fixing alignment and sizing issues of text inside of elements drawn on design canvases

--- a/static/css/Canvas.css
+++ b/static/css/Canvas.css
@@ -5,6 +5,10 @@ div:focus {
 	outline: none;
 }
 
+body {
+    font-family: -apple-system, BlinkMacSystemFont, sans-serif;
+}
+
 .hidden {
 	display: none;
 }
@@ -23,7 +27,6 @@ div:focus {
 .panel-body {
 	padding: 5;
 }
-
 /**
   General styles
  **/
